- Fix kxml_compiler tests (only with cmake building)

--- a/kxml_compiler/tests/CMakeLists.txt
+++ b/kxml_compiler/tests/CMakeLists.txt
@@ -1,9 +1,16 @@
-MACRO (KODE_ADD_LOCAL_XML_PARSER _sources _current_file)
-  get_filename_component( _schema ${_current_file} ABSOLUTE )
-  get_filename_component( _basename ${_schema} NAME_WE )
+cmake_minimum_required(VERSION 3.5)
 
-  set( _source_cpp ${CMAKE_CURRENT_BINARY_DIR}/${_basename}.cpp )
-  set( _source_h   ${CMAKE_CURRENT_BINARY_DIR}/${_basename}.h )
+enable_testing()
+
+set(CMAKE_AUTOMOC ON)
+ set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+MACRO (KODE_ADD_LOCAL_XML_PARSER _sources _current_file)
+  get_filename_component(_schema ${_current_file} ABSOLUTE)
+  get_filename_component(_basename ${_schema} NAME_WE)
+
+  set(_source_cpp ${CMAKE_CURRENT_BINARY_DIR}/${_basename}.cpp)
+  set(_source_h   ${CMAKE_CURRENT_BINARY_DIR}/${_basename}.h)
 
   add_custom_command(
     OUTPUT ${_source_cpp} ${_source_h}
@@ -11,37 +18,65 @@ MACRO (KODE_ADD_LOCAL_XML_PARSER _sources _current_file)
     ARGS ${_schema} ${ARGN}
     MAIN_DEPENDENCY ${_schema}
     DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/../kxml_compiler"
-  )
+)
 
-  set( ${_sources} ${${_sources}} ${_source_cpp} )
+  set(${_sources} ${${_sources}} ${_source_cpp})
 ENDMACRO (KODE_ADD_LOCAL_XML_PARSER)
 
-set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
 
-########### next target ###############
+find_package(Qt5Core REQUIRED)
+find_package(Qt5Xml REQUIRED)
+find_package(Qt5Network REQUIRED)
+find_package(Qt5Test REQUIRED)
 
-set( testfeatures_SRCS testfeatures.cpp )
-kode_add_local_xml_parser( testfeatures_SRCS data/kde-features.rng )
+add_definitions(${QT_DEFINITIONS})
+include_directories(${CMAKE_BINARY_DIR})
+
+include_directories(
+    ${Qt5_INCLUDES}
+    ${Qt5_INCLUDE_DIRS}
+    ${Qt5Core_INCLUDES}
+    ${Qt5Core_INCLUDE_DIRS}
+    ${Qt5Xml_INCLUDES}
+    ${Qt5Xml_INCLUDE_DIRS}
+    ${Qt5Network_INCLUDES}
+    ${Qt5Network_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../..
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../common
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../schema
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../libkode
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../kwsdl
+)
+
+########### testfeatures ###############
+
+set(testfeatures_SRCS testfeatures.cpp)
+kode_add_local_xml_parser(testfeatures_SRCS data/kde-features.rng)
+set_property(SOURCE kde-features.h PROPERTY SKIP_AUTOMOC ON)
+set_property(SOURCE kde-features.cpp PROPERTY SKIP_AUTOMOC ON)
 
 
-#add_executable( testfeatures ${testfeatures_SRCS} )
+add_executable(testfeatures ${testfeatures_SRCS})
 
-#qt5_use_modules(testfeatures Core)
-#qt5_use_modules(testfeatures Xml)
-#qt5_use_modules(testfeatures Network)
+qt5_use_modules(testfeatures Core)
+qt5_use_modules(testfeatures Xml)
+qt5_use_modules(testfeatures Network)
 
-#target_link_libraries(testfeatures Qt5::Core)
-#target_link_libraries(testfeatures Qt5::Xml)
-#target_link_libraries(testfeatures Qt5::Network)
+target_link_libraries(testfeatures Qt5::Core)
+target_link_libraries(testfeatures Qt5::Xml)
+target_link_libraries(testfeatures Qt5::Network)
 
-#target_link_libraries( testfeatures  ${QT_QTXML_LIBRARY} )
+########### testholidays ###############
 
-########### next target ###############
+set(testholidays_SRCS testholidays.cpp)
+kode_add_local_xml_parser(testholidays_SRCS data/kde-holidays.rng)
+set_property(SOURCE kde-holidays.h PROPERTY SKIP_AUTOMOC ON)
+set_property(SOURCE kde-holidays.cpp PROPERTY SKIP_AUTOMOC ON)
 
-set( testholidays_SRCS testholidays.cpp )
-kode_add_local_xml_parser( testholidays_SRCS data/kde-holidays.rng )
-
-add_executable( testholidays ${testholidays_SRCS} )
+add_executable(testholidays ${testholidays_SRCS})
 qt5_use_modules(testholidays Core)
 qt5_use_modules(testholidays Xml)
 qt5_use_modules(testholidays Network)
@@ -50,14 +85,13 @@ target_link_libraries(testholidays Qt5::Core)
 target_link_libraries(testholidays Qt5::Xml)
 target_link_libraries(testholidays Qt5::Network)
 
-target_link_libraries( testholidays ${QT_QTXML_LIBRARY} )
 
+########### parserxsdtest ###############
 
-########### next target ###############
+set(parsertest_SRCS parserxsdtest.cpp)
+set_property(SOURCE parserxsdtest.cpp PROPERTY SKIP_AUTOMOC OFF)
 
-set( parsertest_SRCS parserxsdtest.cpp )
-
-add_executable( parserxsdtest ${parsertest_SRCS} )
+add_executable(parserxsdtest ${parsertest_SRCS})
 qt5_use_modules(parserxsdtest Core)
 qt5_use_modules(parserxsdtest Xml)
 qt5_use_modules(parserxsdtest Network)
@@ -67,14 +101,16 @@ target_link_libraries(parserxsdtest Qt5::Core)
 target_link_libraries(parserxsdtest Qt5::Xml)
 target_link_libraries(parserxsdtest Qt5::Network)
 target_link_libraries(parserxsdtest Qt5::Test)
-target_link_libraries( parserxsdtest kschema ${QT_QTTEST_LIBRARY} ${QT_QTCORE_LIBRARY} )
+target_link_libraries(parserxsdtest kschema)
 
-# next target
+########### testaccounts ###############
 
-set( testaccounts_SRCS testaccounts.cpp )
-kode_add_local_xml_parser( testaccounts_SRCS data/account.xml
-  --create-crud-functions )
-add_executable( testaccounts ${testaccounts_SRCS} )
+set(testaccounts_SRCS testaccounts.cpp)
+kode_add_local_xml_parser(testaccounts_SRCS data/account.xml --create-crud-functions)
+set_property(SOURCE account.h PROPERTY SKIP_AUTOMOC ON)
+set_property(SOURCE account.cpp PROPERTY SKIP_AUTOMOC ON)
+
+add_executable(testaccounts ${testaccounts_SRCS})
 qt5_use_modules(testaccounts Core)
 qt5_use_modules(testaccounts Xml)
 qt5_use_modules(testaccounts Network)
@@ -82,31 +118,30 @@ qt5_use_modules(testaccounts Network)
 target_link_libraries(testaccounts Qt5::Core)
 target_link_libraries(testaccounts Qt5::Xml)
 target_link_libraries(testaccounts Qt5::Network)
-target_link_libraries( testaccounts ${QT_QTXML_LIBRARY} )
 
-# tests
-#set( testparser_SRCS testparser.cpp )
-#add_executable( testparser ${testparser_SRCS} )
-#qt5_use_modules(testparser Core)
-#qt5_use_modules(testparser Xml)
-#qt5_use_modules(testparser Network)
-#qt5_use_modules(testparser Test)
+########### testparser ###############
 
-#target_link_libraries(testparser Qt5::Core)
-#target_link_libraries(testparser Qt5::Xml)
-#target_link_libraries(testparser Qt5::Network)
-#target_link_libraries(testparser Qt5::Test)
-#target_link_libraries( testparser ${QT_QTTEST_LIBRARY} ${QT_QTXML_LIBRARY} )
+# set(testparser_SRCS testparser.cpp)
+# add_executable(testparser ${testparser_SRCS})
+# qt5_use_modules(testparser Core)
+# qt5_use_modules(testparser Xml)
+# qt5_use_modules(testparser Network)
+# qt5_use_modules(testparser Test)
+# 
+# target_link_libraries(testparser Qt5::Core)
+# target_link_libraries(testparser Qt5::Xml)
+# target_link_libraries(testparser Qt5::Network)
+# target_link_libraries(testparser Qt5::Test)
 
 # tests
 
 ADD_TEST(RunKXmlCompiler ${EXECUTABLE_OUTPUT_PATH}/../kxml_compiler --help)
-#ADD_TEST(RunTestFeatures ${EXECUTABLE_OUTPUT_PATH}/testfeatures)
+ADD_TEST(RunTestFeatures ${EXECUTABLE_OUTPUT_PATH}/testfeatures)
 ADD_TEST(RunTestHolidays ${EXECUTABLE_OUTPUT_PATH}/testholidays)
 ADD_TEST(RunTestAccount ${EXECUTABLE_OUTPUT_PATH}/testaccounts
   ${CMAKE_CURRENT_SOURCE_DIR}/data/account.xml)
 ADD_TEST(RunTestAccount2 ${EXECUTABLE_OUTPUT_PATH}/testaccounts
   ${CMAKE_CURRENT_SOURCE_DIR}/data/account2.xml
   ${CMAKE_CURRENT_SOURCE_DIR}/data/out_account2.xml)
-#ADD_TEST(RunTestParser ${EXECUTABLE_OUTPUT_PATH}/testparser)
+# ADD_TEST(RunTestParser ${EXECUTABLE_OUTPUT_PATH}/testparser)
 
